src/objects/CRM_WF_SMS__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Leyenda_Del_SMS__c</fullName>
        <label>Leyenda del SMS del mensaje</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_de_la_Campana__c</fullName>
        <label>Nombre de la Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_de_SMS__c</fullName>
        <label>Tipo de SMS</label>
        <type>TextArea</type>
    </fields>
    <label>SMS</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>SMS-{0000000}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>